import "GuildMsg.proto";


// 获取秘境可邀请的在线成员列表
message C2SOnlineSecretMembers { //cmd=SECRET_ONLINE_MEMBERS 可邀请的在线成员列表
}
message S2COnlineSecretMembers {
	repeated SecretMemberInfo memberList = 1;// 申请列表
}

// 创建秘境房间
message C2SCreateSecretRoom { //cmd=SECRET_CREATE_ROOM 公会创建秘境房间
	required int32 chapterId		= 1;	// 章节Id
}
message S2CCreateSecretRoom {
	required int32 roomId			= 1;	// 服务器产生房间Id
	required int32 chapterId		= 2;	// 章节Id	
}

// 获取秘境成员列表
message C2SGetSecretMembers { //cmd=SECRET_GET_MEMBERS
}
message S2CGetSecretMembers {
	required int32 chapterId		= 1;	// 章节Id
	required int64 captainId		= 2;	// 队长Id
	required int64 closeTime		= 3;	// 关闭时间
	repeated SecretMemberInfo memberList= 4;// 成员列表
}

// 秘境邀请某个成员
message C2SSecretInviteMember { //cmd=SECRET_INVITE_MEMBER 
	required int64 memberId			= 1;	// 成员的Id  0 为一键邀请
}
message S2CSecretInviteMember {
	repeated int32 results 			= 1; 	// 邀请成功， 0-失败 1成功 2不在线
	repeated int64 memberIds		= 2;	// 成员的Id列表
	repeated int64 cdTimes			= 3;	// cd时间 列表
}

// 同意加入秘境
message C2SAgreeJoinSecret { //cmd=SECRET_AGREE_JOIN
	required int32 roomId			= 1;	// 房间Id
	required int32 opType			= 2;	// 操作类型0-同意邀请 1-拒绝邀请
}
message S2CAgreeJoinSecret {
	required int32 roomId			= 1; 	// 房间Id
	required int32 opType			= 2;	// 操作类型0-同意邀请 1-拒绝邀请
	optional int32 result			= 3[default = 0];	// 加入结果0-加入失败 1-加入成功
	optional int32 chapterId		= 4[default = 0];	// 章节Id
	optional int64 captainId		= 5[default = 0];	// 队长ID
	optional int64 closeTime		= 6[default = 0];	// 关闭时间
	repeated SecretMemberInfo memberList= 7;// 成员列表
}

// 秘境踢除成员
message C2SSecretKickMember { //cmd=SECRET_KICK_MEMBER
	required int32 memberId			= 1;	// 成员Id
}
message S2CSecretKickMember {
	required int32 result 			= 1; 	// 踢除成员， 0-失败 1成员
}

// 秘境成员退出
message C2SSecretMemberQuit { //cmd=SECRET_MEMBER_QUIT
}
message S2CSecretMemberQuit{
	required int32 result			= 1;	// 退出结果0-退出失败 1-退出成功
}

// 秘境成员变化 (服务器主动推送)
message S2CSecretMemberChange { //cmd=SECRET_CHANGE_MEMBER
	required int32 change			= 1;	// 0-加入房间，1-主动离开 2-被踢出
	required SecretMemberInfo memberInfo= 2;// 变化的成员信息
}

// 秘境战斗开始
message C2SSecretFightStart { //cmd=SECRET_FIGHT_BEGIN
	required int32 stageId = 1;//关卡Id
	repeated int32 heroIds = 2;//参战英雄
}
message S2CSecretFightStart {
	required int64 fightId = 1 ;//战斗Id，由服务器生成，用于结算回传
}

// 秘境战斗结束
message C2SSecretFightEnd { //cmd=SECRET_FIGHT_END
	required int64 fightId = 1;//战斗Id，由战斗开始前，服务器下发
	repeated int32 heroIds = 2;//已方英雄ID 列表
	repeated float heroHps = 3;//已方英雄血值列表
	repeated int32 enemyIds = 4;//敌方英雄ID 列表
	repeated float enemyHps = 5;//敌方英雄血值列表
	required FightResultParam resultParam = 6;//战斗结果上报数据
}
message S2CSecretFightEnd {
	required int64 fightId = 1;//战斗Id，由战斗开始前，服务器下发
	required FightResultType result = 2;//战斗结果
	required DropReward reward = 3;
}

// 秘境房间开启 
message C2SSecretRoomOpen { //cmd=SECRET_ROOM_OPEN
}
message S2CSecretRoomOpen {
	required int32 result	= 1;	// 结果0-开启失败 1-开启成功
}

// 秘境房间关闭
message C2SSecretRoomClose { //cmd=SECRET_ROOM_CLOSE
}
message S2CSecretRoomClose {
	required int32 result	= 1;	// 结果0-关闭失败 1-关闭成功
}

// 秘境房间变化(服务器推送)
message S2CSecretRoomChange { //cmd=SECRET_ROOM_CHANGE
	required int32 roomId 	 = 1;	//房间Id
	required int32 roomState = 2;	//房间状态 0 解散 1组队 2秘境副本
	required int64 closeTime = 3;	//秘境关闭时间
}

// 秘境关卡变化 (服务器主动推送)
message S2CSecretStageChange { //cmd=SECRET_STAGE_CHANGE
	required int32 stageId = 1;		//关卡Id
	required int32 status = 2;		//关卡状态0-未占领 1-已经占领
	optional SecretMemberInfo member = 3;	//正在攻击玩家, null-无玩家攻击
}

// 秘境Buf变化(服务器主动推送)
message S2CSecretBufChange { //cmd=SECRET_BUFF_CHANGE
	required int32 stageId = 1;		//关卡Id
	repeated int32 bufId = 2;		//Buf ID
	repeated int32 bufVal = 3;		//Buf值
}

// 秘境成员信息
message SecretMemberInfo {
	required int64 playerId			= 1;				// 玩家ID
	required string name			= 2;				// 成员名称
	required int32 level			= 3;				// 成员等级
	required int32 iconType 		= 4;				// 成员头像类型, 按位区分0位-为武将ID, 1位-为玩家URL, 2位-取得过PVP排名第一
	required string icon			= 5;				// 成员头像
	required int32 fightVal			= 6;				// 战斗力
}